--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
 
 .grid {
-    height: 400px;
-    width: 400px;
+    height: 420px;
+    width: 420px;
     display: flex;
     flex-wrap: wrap;
-    background-color: grey;
+    background-image: url('https://www.filterforge.com/filters/11635-v7.jpg');
+    
 }
 
 body{
@@ -19,8 +20,10 @@ body{
     width: 40px;
     border: 1pxdcf;
     text-align: center;
+    border: 1px solid black;
 }
 .bomb{
-    background-color: grey;
+    background-image: url('https://www.filterforge.com/filters/11635-v7.jpg');
+    
 }
 
