figured out how to add sound to the game

--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@ body, html{
     
 }
 .bomb{
-    background-image: url('https://www.filterforge.com/filters/11635-v7.jpg');
+    /* background-image: url('https://www.filterforge.com/filters/11635-v7.jpg'); */
+    /* this line for presentation purposes */
+    background-color: red;
 }
 
 h1{
@@ -46,4 +48,7 @@ p{
     margin: 10px;
     font-family: 'Minecraft', sans-serif;
     color: red;
+}
+body{
+    margin:auto
 }
